Penultimate round for a launchable 1.20.6 port.